<resources>
    <string name="app_name">AppInmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Menu items-->
    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_logout">Salir</string>
    <string name="menu_login">Iniciar Sesión</string>

    <!--Login-->
    <string name="txt_login">Iniciar Sesión</string>
    <string name="et_hint_email">E-Mail</string>
    <string name="et_hint_password">Contraseña</string>
    <string name="titulo_dialog_salir">Advertencia</string>
    <string name="pregunta_dialog_salir">¿Salir de la App?</string>

    <!--Perfil-->
    <string name="tv_titulo_perfil">Mis Datos</string>
    <string name="tv_nombre">Nombre</string>
    <string name="tv_apellido">Apellido</string>
    <string name="tv_dni">DNI</string>
    <string name="tv_telefono">Teléfono</string>
    <string name="tv_email">E-mail</string>
    <string name="et_hint_nombre">nombre</string>
    <string name="et_hint_apellido">apellido</string>
    <string name="et_hint_dni">DNI</string>
    <string name="et_hint_telefono">teléfono</string>
    <string name="cambiar_contrasenia">Cambiar Contraseña</string>
    <string name="contrasenia_actual">Contraseña Actual</string>
    <string name="nueva_contrasenia">Nueva Contraseña</string>
    <string name="repetir_nueva_contrasenia">Repita la Nueva Contraseña</string>
    <string name="cambiar_la_contrasenia">Cambiar la Contraseña</string>


    <!--Mensajes de error de validacion-->
    <string name="dni_vacio">El DNI no puede estar vacío</string>
    <string name="longitud_dni">La longitud del DNI debe ser de 9 caracteres</string>
    <string name="error_desconocido">Error desconocido</string>

    <!--extras-->
    <string name="dialog_si">SI</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="titulo_dialog_mensaje">Mensaje</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="cambiar">Cambiar</string>
    <string name="detalle">Detalle</string>
    <string name="nombre_y_apellido">Nombre y Apellido</string>

    <!--Home-->
    <string name="titulo_home">Donde Nos Encontramos</string>

    <!--inmuebles-->
    <string name="foto_del_inmueble">Foto del inmueble</string>
    <string name="agregar_inmueble">Agregar Inmueble</string>
    <string name="calle">Calle</string>
    <string name="nro">Nro</string>
    <string name="tipo_de_inmueble">Tipo de Inmueble</string>
    <string name="uso">Uso</string>
    <string name="cant_ambientes">Cant. ambientes</string>
    <string name="precio">Precio</string>
    <string name="direccion">Dirección</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="disponible">Disponible</string>
    <string name="detalle_del_inmueble">Detalle del Inmueble</string>
    <string name="cargar_foto">Cargar Foto</string>
    <string name="foto_del_inmueble_a_registrar">Foto del Inmueble a registrar</string>
    <string name="direccion_del_inmueble">Dirección del Inmueble</string>

    <!--inquilino-->
    <string name="inquilino">Inquilino</string>
    <string name="detalle_del_inquilino">Detalle del Inquilino</string>
    <string name="datos_del_inquilino">Datos del Inquilino</string>

    <!--Contratos-->
    <string name="detalle_contrato">Detalle Contrato</string>
    <string name="monto_mensual">Monto Mensual</string>
    <string name="fecha_de_inicio">Fecha de Inicio</string>
    <string name="fecha_fin">Fecha Fin</string>
    <string name="ver_pagos">Ver Pagos</string>
    <string name="detalle_">Detalle :</string>
    <string name="importe_">Importe :</string>
    <string name="fecha_">Fecha :</string>
    <string name="nro_pago_">Nro Pago :</string>
    <string name="pagos">Pagos</string>
</resources>