<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.appinmobiliaria.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.appinmobiliaria.ui.perfil.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" >
        <action
            android:id="@+id/action_nav_perfil_to_cambiarContraseniaFragment"
            app:destination="@id/cambiarContraseniaFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inmuebles"
        android:name="com.example.appinmobiliaria.ui.inmueble.InmuebleFragment"
        android:label="@string/menu_inmuebles"
        tools:layout="@layout/fragment_inmueble" >
        <action
            android:id="@+id/action_nav_inmuebles_to_detalleInmuebleFragment"
            app:destination="@id/detalleInmuebleFragment" />
        <action
            android:id="@+id/action_nav_inmuebles_to_nuevoInmuebleFragment"
            app:destination="@id/nuevoInmuebleFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_inquilinos"
        android:name="com.example.appinmobiliaria.ui.inquilino.InquilinoFragment"
        android:label="@string/menu_inquilinos"
        tools:layout="@layout/fragment_inquilino" >
        <action
            android:id="@+id/action_nav_inquilinos_to_detalleInquilinoFragment"
            app:destination="@id/detalleInquilinoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_contratos"
        android:name="com.example.appinmobiliaria.ui.contrato.ContratoFragment"
        android:label="@string/menu_contratos"
        tools:layout="@layout/fragment_contrato" >
        <action
            android:id="@+id/action_nav_contratos_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.appinmobiliaria.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/cambiarContraseniaFragment"
        android:name="com.example.appinmobiliaria.ui.perfil.CambiarContraseniaFragment"
        android:label="@string/cambiar_la_contrasenia"
        tools:layout="@layout/fragment_cambiar_contrasenia" >
        <action
            android:id="@+id/action_cambiarContraseniaFragment_to_nav_perfil"
            app:destination="@id/nav_perfil" />
    </fragment>
    <fragment
        android:id="@+id/detalleInmuebleFragment"
        android:name="com.example.appinmobiliaria.ui.inmueble.DetalleInmuebleFragment"
        android:label="@string/detalle_del_inmueble"
        tools:layout="@layout/fragment_detalle_inmueble" >
        <action
            android:id="@+id/action_detalleInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/nuevoInmuebleFragment"
        android:name="com.example.appinmobiliaria.ui.inmueble.NuevoInmuebleFragment"
        android:label="@string/agregar_inmueble"
        tools:layout="@layout/fragment_nuevo_inmueble" >
        <action
            android:id="@+id/action_nuevoInmuebleFragment_to_nav_inmuebles"
            app:destination="@id/nav_inmuebles" />
    </fragment>
    <fragment
        android:id="@+id/detalleInquilinoFragment"
        android:name="com.example.appinmobiliaria.ui.inquilino.DetalleInquilinoFragment"
        android:label="@string/detalle_del_inquilino"
        tools:layout="@layout/fragment_detalle_inquilino" >
        <action
            android:id="@+id/action_detalleInquilinoFragment_to_nav_inquilinos"
            app:destination="@id/nav_inquilinos" />
    </fragment>
    <fragment
        android:id="@+id/detalleContratoFragment"
        android:name="com.example.appinmobiliaria.ui.contrato.DetalleContratoFragment"
        android:label="@string/detalle_contrato"
        tools:layout="@layout/fragment_detalle_contrato" >
        <action
            android:id="@+id/action_detalleContratoFragment_to_nav_contratos"
            app:destination="@id/nav_contratos" />
        <action
            android:id="@+id/action_detalleContratoFragment_to_pagosFragment"
            app:destination="@id/pagosFragment" />
    </fragment>
    <fragment
        android:id="@+id/pagosFragment"
        android:name="com.example.appinmobiliaria.ui.contrato.PagosFragment"
        android:label="@string/pagos"
        tools:layout="@layout/fragment_pagos" >
        <action
            android:id="@+id/action_pagosFragment_to_detalleContratoFragment"
            app:destination="@id/detalleContratoFragment" />
    </fragment>
</navigation>